# sl-hello-goodbye

./: CHANGELOG.md  Cargo.toml  README.md  changelog  cliff-debian.toml  cliff.toml  deny.toml  push-deploy-branches.sh  release.sh
.github/workflows/: github-release.yaml
rpm/centos8/: sl-hello-goodbye.spec
