[package]
name = "sl-hello-goodbye"
description = "Tails chat.txt log files and processes local chat lines and Entered chat range notifications to produce desktop notifications for people to still say Hello too and similar for goodbyes"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.3.2"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
publish = false

exclude = [
    "push-deploy-branches.sh",
    ".env",
    "tarpaulin-report.html",
    "tarpaulin-report.json",
]

[package.metadata.deb]
name = "sl-hello-goodbye"
depends = "$auto"
extended-description = "Tails chat.txt log files and processes local chat lines and Entered chat range notifications to produce desktop notifications for people to still say Hello too and similar for goodbyes"
section = "database"
copyright = "2024, Matthias Hörmann <mhoermann@gmail.com>"
assets = [[ "target/release/sl_hello_goodbye", "usr/bin/", "755" ]]
maintainer-scripts = "maintainer-scripts"
changelog = "changelog"
revision = "1"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
sl_hello_goodbye = { path = "/usr/bin/sl_hello_goodbye" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.5.1", features = ["auto-color"] }
chumsky = "0.9.3"
clap = { version = "4.5.48", features = ["derive", "cargo"] }
dirs2 = "3.0.1"
humantime = "2.3.0"
linemux = "0.3.0"

log-panics = { version = "2.1.0", features = ["with-backtrace"] }
notify-rust = "4.11.7"
redb = "3.1.0"
sl-chat-log-parser = "0.1.4"
sl-types = { version = "0.1.9", features = ["chumsky"] }
thiserror = { version = "2.0.17" }
time = { version = "0.3.44", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.47.1", features = [ "full" ] }

tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.20", features = [ "env-filter", "tracing-log" ] }

[dev-dependencies]
dotenvy = "0.15.7"
envy = "0.4.2"
pretty_assertions = { version = "1.4.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = { version = "4.7.0", default-features = false }
tracing-test = "0.2.5"

[profile.release]
# do not strip debug info from release builds, useful for debugging those, cargo-flamegraph profiling or similar use cases
debug = true
